HW1Task4: Flow working, but need cleaning and add tests